@@ -20,6 +20,7 @@ exempt of errors.
 - Fabrice Fontaine
 - Fredrik Svensson
 - Glen Masgai
+- Hartmut Holzgraefe - hholzgra
 - Jiri Zouhar
 - John Dennis
 - Jonathan Casiot (no_dice)
